# ImageFilters

./: CMakeLists.txt  main.cpp
filters/: filters.cpp  filters.h
tickmetr/: TickMeter.cpp  TickMeter.h
